--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'	//xml return
+
+	//HATEOAS - Hypermedia As the Engine og Application state
+	//현재 리스와 연관된(호출 가능한)소 자원 상태 정보를 제공
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+
+	//xml return
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
