20201214 Actuator & Hal browser

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,14 @@ logging:
   level:
     org.springframework: DEBUG
 
-#다국어 파일 설정
+# 다국어 파일 설정
 spring:
   messages:
     basename: messages
+
+# Monitoring by Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
