--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,23 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	//Actuator for monitoring
+	//http://localhost:8088/actuator
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	//HAL Browser -> HyperText Application Language
+	//http://localhost:8088
+	implementation 'org.springframework.data:spring-data-rest-hal-explorer'
 
 	//HATEOAS - Hypermedia As the Engine og Application state
 	//현재 리스와 연관된(호출 가능한)소 자원 상태 정보를 제공
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 
 	//Swagger - for REST API Documentation
+	//http://localhost:8088/v2/api-docs/
+	//http://localhost:8088/swagger-ui/
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 	//xml return
