--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,9 @@ spring:
 
   # jpa log
   jpa:
-    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   h2:
     console:
       enabled: true
@@ -35,6 +37,6 @@ management:
       exposure:
         include: "*"
 
-
-
-
+logging.level:
+  org.hibernate.SQL: debug    #jpa/hibernate 가 생성하는 모든 sql을 눈으로 확인가능
+  org.hibernate.type: trace  #SQL 실행 파라미터를 로그로 남긴다
