--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,9 +22,7 @@ spring:
 
   # jpa log
   jpa:
-    properties:
-      hibernate:
-        format_sql: true
+    show-sql: true
   h2:
     console:
       enabled: true
@@ -35,7 +33,3 @@ management:
     web:
       exposure:
         include: "*"
-
-logging.level:
-  org.hibernate.SQL: debug    #jpa/hibernate 가 생성하는 모든 sql을 눈으로 확인가능
-  org.hibernate.type: trace  #SQL 실행 파라미터를 로그로 남긴다
